<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_title">About</string>
    <string name="admin_mode_title">Admin Mode</string>
    <string name="admin_settings_title">Admin Settings</string>
    <string name="admin_settings_title_capitalized">ADMIN SETTINGS</string>
    <string name="admin_settings_title_field">Admin Settings</string>
    <string name="admin_title">Admin</string>
    <string name="allow_comments_title">Allow Comments</string>
    <string name="app_info_title">App Info</string>
    <string name="app_name">Treadly</string>
    <string name="app_title">App</string>
    <string name="app_title_capitalized">APP</string>
    <string name="app_version_title_field">App Version:</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_state_active_capitalized">ACTIVE</string>
    <string name="auth_state_disabled_capitalized">DISABLED</string>
    <string name="auth_state_inactive_capitalized">INACTIVE</string>
    <string name="authentication_state_title_row">Authentication State:</string>
    <string name="auto_run_mode_title">Auto Run Mode</string>
    <string name="average_stride_mode_title">Average stride mode:</string>
    <string name="avg_speed_title">Avg Speed</string>
    <string name="ble_board_title">BLE BOARD</string>
    <string name="blocked_user">YOU HAVE BLOCKED THIS USER</string>
    <string name="bluetooth_enabled_title">Bluetooth enabled:</string>
    <string name="bluetooth_speaker_password">Bluetooth Speaker Password</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buddy_info_audio_intro">Audio intro</string>
    <string name="buddy_info_availability_day_friday">Fr</string>
    <string name="buddy_info_availability_day_monday">Mo</string>
    <string name="buddy_info_availability_day_saturday">Sa</string>
    <string name="buddy_info_availability_day_sunday">Su</string>
    <string name="buddy_info_availability_day_thursday">Th</string>
    <string name="buddy_info_availability_day_tuesday">Tu</string>
    <string name="buddy_info_availability_day_wednesday">We</string>
    <string name="buddy_info_description_label">What am I looking for</string>
    <string name="buddy_info_group_label">Participating in %1$d teams &gt;</string>
    <string name="buddy_info_media_finished">Finished</string>
    <string name="buddy_info_media_loading">Loading…</string>
    <string name="buddy_info_media_playing">Playing…</string>
    <string name="buddy_info_no_video_audio">Not available</string>
    <string name="buddy_info_play_video_audio">Play</string>
    <string name="buddy_info_time_label">Time</string>
    <string name="buddy_info_title">Info</string>
    <string name="buddy_info_video_intro">Video intro</string>
    <string name="buddy_profile_edit_audio_start">Record Audio - Click to begin recording</string>
    <string name="buddy_profile_edit_audio_stop">Audio is Recording - Click to end recording</string>
    <string name="buddy_profile_edit_create_text">Create</string>
    <string name="buddy_profile_edit_delete_text">Delete</string>
    <string name="buddy_profile_edit_description">What are you looking for?</string>
    <string name="buddy_profile_edit_interests">Add Interests &gt;</string>
    <string name="buddy_profile_edit_text_box">Enter text here</string>
    <string name="buddy_profile_edit_update_text">Update</string>
    <string name="buddy_profile_edit_video">Record Video &gt;</string>
    <string name="buddy_profile_media_status_set">Recording exists</string>
    <string name="buddy_profile_media_status_unset">No recording yet</string>
    <string name="buddy_profile_settings_edit_interests_title">Select Interests</string>
    <string name="buddy_profile_settings_edit_tod_title">Select Available Times</string>
    <string name="buddy_profile_settings_title">Buddy Profile Settings</string>
    <string name="calendar_abbreviation" />
    <string name="calories_label">&lt;font color=#707070&gt;calories&lt;/font&gt;</string>
    <string name="calories_title">Calories</string>
    <string name="change_maintenance_threshold">Change maintenance threshold:</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_username_title">Change Username</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="claim_activities_title">Claim Activities</string>
    <string name="close_label">Close</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="device_connect_status_no_device_found_header">A Treadly cannot be located near the phone</string>
    <string name="device_connect_status_no_device_found_item_1">Make sure you\'re near the machine.</string>
    <string name="device_connect_status_no_device_found_item_2">Check that the power is on.</string>
    <string name="device_connect_status_no_device_found_item_3">Confirm that your Treadly model supports Bluetooth remote control.  Learn More</string>
    <string name="device_connect_status_pair_mode_directions_2">Once in pair mode, the Treadly display will show a Twenty second (20) countdown indicating pair mode has been initiated.</string>
    <string name="device_connect_status_pair_mode_gen3_directions">To start the pairing process, press the PAUSE button located on the handrail for five (5) seconds.</string>
    <string name="device_connect_status_pair_mode_header">Failed to connect</string>
    <string name="device_connect_status_pair_mode_title">Pair Not Started</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="onboarding_not_found_invite_label">I have an invite code 🤫</string>
    <string name="onboarding_not_found_title">Not Found</string>
    <string name="onboarding_not_found_try_again_label">Try Again</string>
    <string name="one">1</string>
    <string name="public_title">Public</string>
    <string name="start_title">Start</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="who_can_join_this_workout">Who can join this workout</string>
    <string name="who_can_view_the_recording">Who can view the recording</string>
</resources>