<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/bg_color" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/edit_buddy_profile_header" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/top_nav_header"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@+id/find_buddy_wrapper_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edit_buddy_profile_header">
        <TextView android:textSize="16sp" android:textColor="@color/white" android:id="@+id/buddy_profile_edit_description_label" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/buddy_profile_edit_description" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <EditText android:id="@+id/buddy_profile_edit_description_text" android:layout_width="match_parent" android:layout_height="96dp" android:layout_marginTop="16dp" android:hint="@string/buddy_profile_edit_text_box" android:inputType="textMultiLine" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_description_label"/>
        <TextView android:textSize="16sp" android:textColor="@color/white" android:id="@+id/buddy_profile_edit_video" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="28dp" android:text="@string/buddy_profile_edit_video" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_description_text"/>
        <TextView android:textSize="12sp" android:textColor="@color/buddy_media_status_text" android:id="@+id/buddy_profile_video_status" android:layout_width="wrap_content" android:layout_height="match_parent" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_video"/>
        <TextView android:textSize="16sp" android:textColor="@color/white" android:id="@+id/buddy_profile_edit_audio" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="28dp" android:text="@string/buddy_profile_edit_audio_start" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_video"/>
        <TextView android:textSize="12sp" android:textColor="@color/buddy_media_status_text" android:id="@+id/buddy_profile_audio_status" android:layout_width="wrap_content" android:layout_height="match_parent" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_audio"/>
        <TextView android:textSize="16sp" android:textColor="@color/white" android:id="@+id/buddy_profile_edit_interests" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="28dp" android:text="@string/buddy_profile_edit_interests" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_audio"/>
        <LinearLayout android:id="@+id/buddy_profile_edit_days_available" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="48dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/buddy_profile_edit_interests">
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_mo" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_monday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_tu" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_tuesday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_we" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_wednesday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_th" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_thursday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_fr" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_friday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_sa" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_saturday"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/buddy_edit_availability_su" android:background="@color/buddy_day_unavailable" android:layout_width="42dp" android:layout_height="42dp" android:adjustViewBounds="true" android:text="@string/buddy_info_availability_day_sunday"/>
        </LinearLayout>
        <TextView android:textSize="20sp" android:textColor="@color/teal" android:gravity="center" android:id="@+id/buddy_profile_edit_create_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/buddy_profile_edit_create_text" android:fontFamily="@font/montserrat_regular" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_days_available"/>
        <TextView android:textSize="20sp" android:textColor="@color/teal" android:gravity="center" android:id="@+id/buddy_profile_edit_update_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/buddy_profile_edit_update_text" android:fontFamily="@font/montserrat_regular" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_create_button"/>
        <TextView android:textSize="20sp" android:textColor="@color/teal" android:gravity="center" android:id="@+id/buddy_profile_edit_delete_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/buddy_profile_edit_delete_text" android:fontFamily="@font/montserrat_regular" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/buddy_profile_edit_update_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
