<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/speed_option_shape" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="50sp" android:textColor="@color/dark_6" android:id="@+id/speed_1_button" android:background="@drawable/transparent_drawable" android:layout_width="0dp" android:layout_height="78dp" android:text="@string/one" android:fontFamily="@font/proximanova_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/speed_2_button" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <Button android:textSize="50sp" android:textColor="@color/dark_6" android:id="@+id/speed_2_button" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="78dp" android:text="@string/two" android:fontFamily="@font/proximanova_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/speed_3_button" app:layout_constraintStart_toEndOf="@+id/speed_1_button" app:layout_constraintTop_toTopOf="0"/>
    <Button android:textSize="50sp" android:textColor="@color/dark_6" android:id="@+id/speed_3_button" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="78dp" android:text="@string/three" android:fontFamily="@font/proximanova_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/speed_4_button" app:layout_constraintStart_toEndOf="@+id/speed_2_button" app:layout_constraintTop_toTopOf="0"/>
    <Button android:textSize="50sp" android:textColor="@color/dark_6" android:id="@+id/speed_4_button" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="78dp" android:text="@string/four" android:fontFamily="@font/proximanova_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/speed_5_button" app:layout_constraintStart_toEndOf="@+id/speed_3_button" app:layout_constraintTop_toTopOf="0"/>
    <Button android:textSize="50sp" android:textColor="@color/dark_6" android:id="@+id/speed_5_button" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="78dp" android:text="@string/five" android:fontFamily="@font/proximanova_bold" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/speed_4_button" app:layout_constraintTop_toTopOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
