<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/bg_color" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="31sp" android:textColor="@color/white" android:id="@+id/onboarding_no_device_found_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="46dp" android:text="@string/onboarding_not_found_title" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="21dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="14sp" android:textColor="@color/dark_4" android:id="@+id/onboarding_no_device_found_header" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/device_connect_status_no_device_found_header" android:fontFamily="@font/montserrat_regular" app:layout_constraintStart_toStartOf="@+id/onboarding_no_device_found_title" app:layout_constraintTop_toBottomOf="@+id/onboarding_no_device_found_title"/>
    <View android:id="@+id/onboarding_no_device_found_item_1_bullet" android:background="@drawable/device_connect_no_device_bullet" android:layout_width="9dp" android:layout_height="9dp" android:layout_marginTop="33dp" android:layout_marginStart="37dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_no_device_found_header"/>
    <TextView android:textColor="@color/white" android:id="@+id/onboarding_no_device_found_item_1" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/device_connect_status_no_device_found_item_1" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="9dp" android:layout_marginEnd="29dp" app:layout_constraintBottom_toBottomOf="@+id/onboarding_no_device_found_item_1_bullet" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_no_device_found_item_1_bullet" app:layout_constraintTop_toTopOf="@+id/onboarding_no_device_found_item_1_bullet"/>
    <View android:id="@+id/onboarding_no_device_found_item_2_bullet" android:background="@drawable/device_connect_no_device_bullet" android:layout_width="9dp" android:layout_height="9dp" android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="@+id/onboarding_no_device_found_item_1_bullet" app:layout_constraintTop_toBottomOf="@+id/onboarding_no_device_found_item_1_bullet"/>
    <TextView android:textColor="@color/white" android:id="@+id/onboarding_no_device_found_item_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/device_connect_status_no_device_found_item_2" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="9dp" android:layout_marginEnd="29dp" app:layout_constraintBottom_toBottomOf="@+id/onboarding_no_device_found_item_2_bullet" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_no_device_found_item_2_bullet" app:layout_constraintTop_toTopOf="@+id/onboarding_no_device_found_item_2_bullet"/>
    <View android:id="@+id/onboarding_no_device_found_item_3_bullet" android:background="@drawable/device_connect_no_device_bullet" android:layout_width="9dp" android:layout_height="9dp" android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="@+id/onboarding_no_device_found_item_1_bullet" app:layout_constraintTop_toBottomOf="@+id/onboarding_no_device_found_item_2_bullet"/>
    <TextView android:textColor="@color/white" android:id="@+id/onboarding_no_device_found_item_3" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/device_connect_status_no_device_found_item_3" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="9dp" android:layout_marginEnd="29dp" app:layout_constraintBottom_toBottomOf="@+id/onboarding_no_device_found_item_3_bullet" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_no_device_found_item_3_bullet" app:layout_constraintTop_toTopOf="@+id/onboarding_no_device_found_item_3_bullet" app:layout_constraintVertical_bias="0.3"/>
    <Button android:id="@+id/onboarding_no_device_found_try_again_button" android:layout_marginBottom="118dp" android:text="@string/onboarding_not_found_try_again_label" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/treadly_rounded_button"/>
    <Button android:textSize="15sp" android:textColor="@color/white" android:id="@+id/onboarding_no_device_found_invite_code_button" android:background="@color/clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27dp" android:text="@string/onboarding_not_found_invite_label" android:fontFamily="@font/montserrat_light" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_no_device_found_try_again_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
