<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/bg_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="32sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/device_connect_status_pair_mode_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/device_connect_status_pair_mode_title" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="21dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageButton android:id="@+id/device_connect_status_pair_mode_dismiss_button" android:background="@color/clear" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/onboarding_dismiss_button" android:layout_marginEnd="29dp" app:layout_constraintBottom_toBottomOf="@+id/device_connect_status_pair_mode_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/device_connect_status_pair_mode_title"/>
    <TextView android:textSize="17sp" android:textColor="@color/dark_4" android:id="@+id/device_connect_status_no_device_found_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_connect_status_pair_mode_header" android:fontFamily="@font/montserrat_light" app:layout_constraintStart_toStartOf="@+id/device_connect_status_pair_mode_title" app:layout_constraintTop_toBottomOf="@+id/device_connect_status_pair_mode_title"/>
    <TextView android:textSize="17sp" android:textColor="@color/white" android:id="@+id/device_connect_status_pair_mode_directions_one" android:layout_width="340dp" android:layout_height="wrap_content" android:layout_marginTop="41dp" android:text="@string/device_connect_status_pair_mode_gen3_directions" android:fontFamily="@font/montserrat_regular" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/device_connect_status_no_device_found_header"/>
    <ImageView android:id="@+id/device_connect_status_pair_mode_image" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:src="@drawable/estop_pairing" android:scaleType="fitXY" android:layout_marginStart="-45dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/device_connect_status_pair_mode_directions_one"/>
    <TextView android:textSize="17sp" android:textColor="@color/white" android:id="@+id/device_connect_status_pair_mode_directions_two" android:layout_width="350dp" android:layout_height="wrap_content" android:layout_marginTop="41dp" android:text="@string/device_connect_status_pair_mode_directions_2" android:fontFamily="@font/montserrat_light" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/device_connect_status_pair_mode_image"/>
    <Button android:id="@+id/device_connect_status_pair_mode_close_button" android:layout_marginTop="146dp" android:layout_marginBottom="80dp" android:text="@string/close_label" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/device_connect_status_pair_mode_directions_two" style="@style/treadly_rounded_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
