<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/bg_color" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/navigation_bar" android:layout_width="0dp" android:layout_height="wrap_content" layout="@layout/arrow_title_header"/>
    <EditText android:id="@+id/public_stream_options_edit_text" android:background="#292d32" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/navigation_bar"/>
    <TextView android:id="@+id/public_stream_options_join_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/who_can_join_this_workout" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/public_stream_options_edit_text"/>
    <TextView android:id="@+id/public_stream_options_join_permission" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/public_title" android:textAlignment="textEnd" app:layout_constraintBottom_toBottomOf="@+id/public_stream_options_join_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/public_stream_options_join_title" app:layout_constraintTop_toTopOf="@+id/public_stream_options_join_title"/>
    <TextView android:id="@+id/public_stream_options_view_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/who_can_view_the_recording" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/public_stream_options_join_title"/>
    <TextView android:id="@+id/public_stream_options_view_permission" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/public_title" android:textAlignment="textEnd" app:layout_constraintBottom_toBottomOf="@+id/public_stream_options_view_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/public_stream_options_view_title" app:layout_constraintTop_toTopOf="@+id/public_stream_options_view_title"/>
    <TextView android:id="@+id/public_stream_options_allow_comments_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/allow_comments_title" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/public_stream_options_view_title"/>
    <androidx.appcompat.widget.SwitchCompat android:id="@+id/public_stream_options_allow_comments_switch" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" android:checked="true" android:thumb="@drawable/settings_thumb_selector" android:layout_marginEnd="15dp" app:layout_constraintBottom_toBottomOf="@+id/public_stream_options_allow_comments_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/public_stream_options_allow_comments_title" app:track="@drawable/idle_track_selector"/>
    <Button android:id="@+id/public_stream_options_start_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/start_title" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
